--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,9 @@ h5 {
 .logo .fa-graduation-cap {
   margin-top: 10px;
 }
+.logo .menu_bar {
+  display: none;
+}
 header {
   padding-top: 38px;
 }
@@ -83,13 +86,13 @@ header .container .row nav .menu .menu__item:hover a {
 }
 .content_self .icons {
   font-size: 40px;
-  display: block;
 }
-.content_self .icons ul {
-  display: block;
+.content_self .icons .icons_ul {
+  justify-content: center;
 }
-.content_self .icons ul .fa {
-  /*  margin-left: 55px;*/
+.content_self .icons .icons_ul .fa {
+  margin-left: 25px;
+  margin-right: 25px;
 }
 .content_self .form_entrance form button.btn_registration {
   float: right;
@@ -207,4 +210,81 @@ header .container .row nav .menu .menu__item:hover a {
 }
 .footer .icons_footer ul li a {
   color: #989a99;
+}
+@media screen and (max-width: 1200px) {
+  .content_self {
+    margin-top: 40px;
+  }
+  .content_self .img_author {
+    display: block;
+    border-radius: 100%;
+    width: 200px;
+    height: 200px;
+    background-image: url(/images/author_avatar_sm.jpg);
+  }
+}
+@media screen and (max-width: 992px) {
+  .logo {
+    font-size: 48px;
+    justify-content: center;
+  }
+  .logo .logo_text {
+    margin-left: 10px;
+  }
+  .logo .logo_text a {
+    font-family: 'Fredoka One', cursive;
+  }
+  .logo .fa-graduation-cap {
+    margin-top: 10px;
+  }
+  .text_author {
+    text-align: center;
+  }
+  .text_author .title_author h2 {
+    text-align: center;
+  }
+  .text_author .lable_author h4 {
+    text-align: center;
+  }
+  .form_entrance {
+    margin-top: 35px;
+  }
+  .footer .logo_footer {
+    justify-content: center;
+  }
+  .footer .icons_footer ul.icons_footer_ul {
+    float: none;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header .logo {
+    justify-content: space-between;
+  }
+  .header .logo .menu_bar {
+    display: block;
+  }
+  .header nav {
+    display: none;
+  }
+  .header nav .menu {
+    flex-direction: column;
+  }
+  .header nav .menu li {
+    text-align: center;
+    max-height: 50px;
+  }
+  .footer nav .menu {
+    flex-direction: column;
+  }
+  .footer nav .menu li {
+    text-align: center;
+    max-height: 30px;
+  }
+  .footer .icons_footer {
+    margin-top: 20px;
+  }
+  .footer .logo_footer {
+    margin-bottom: -10px;
+  }
 }
