--- a/public/css/style.less
+++ b/public/css/style.less
@@ -118,8 +118,15 @@ header{
 
   .form_entrance{
     form{
-      button.btn_registration{
+      a.btn_registration{
         float: right;
+      }
+    }
+
+    .a_password_foget{
+      margin-top: 10px;
+      a{
+        color: #0000FF;
       }
     }
   }
