--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -17,3 +17,15 @@
   margin-left: 0;
   margin-right: 0;
 }
+.errors_reg {
+  margin-top: -15px;
+  color: red;
+}
+.left_move_reg {
+  margin-left: -6px;
+}
+@media screen and (max-width: 992px) {
+  .card .card-body .registration_form .left_move_reg {
+    margin-left: -14px;
+  }
+}
