--- a/public/css/registration.less
+++ b/public/css/registration.less
@@ -36,26 +36,24 @@
 
 // Registaration box custom style
 
-.card{
-  .card-body{
-    .registration_form{
-      .registration_btn{
 
+.errors_reg{
+  margin-top: -15px;
+  color: red;
+}
+.left_move_reg{
+  margin-left: -6px;
+}
 
+  @media screen and (max-width: 992px){
+    .card{
+      .card-body{
+        .registration_form{
+          .left_move_reg{
+            margin-left: -14px;
+
+          }
+        }
       }
     }
   }
-}
-
-  // @media screen and (max-width: 992px){
-  //   .card{
-  //     .card-body{
-  //       .registration_form{
-  //         .registration_btn{
-  //           margin-left: 0%;
-  //
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
