--- a/public/css/style.less
+++ b/public/css/style.less
@@ -3,7 +3,10 @@
 @gray: #E4E7E5;
 @superb_gray: #989A99;
 /* Specification */
-
+@import "registration.css" screen;
+@import "passwordReset.css" screen;
+@import "myAccount.css" screen;
+@import "chat.css" screen;
 body {
     font-family: 'PT Sans', sans-serif;
     background-color: @white;
