--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+@import "registration.css" screen;
+@import "passwordReset.css" screen;
+@import "myAccount.css" screen;
+@import "chat.css" screen;
 /* Vars color */
 /* Specification */
 body {
