--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -73,3 +73,11 @@
   background-color: #989a99;
   border-radius: 5px;
 }
+#hint {
+  display: none;
+  position: absolute;
+  border-radius: 5px;
+  box-shadow: 0 0 1px 2px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+  z-index: 100500;
+}
