--- a/public/css/chat.less
+++ b/public/css/chat.less
@@ -95,3 +95,13 @@
 .messages_box::-webkit-scrollbar-thumb { height: 50px; background-color: @superb_gray; border-radius: 5px;}
 // ::-webkit-scrollbar-corner { background-color: #999;}
 // ::-webkit-resizer { background-color: #666;}
+#hint {
+    display: none;
+    position: absolute;
+    //padding: 5px;
+    // margin: -15px auto auto 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 1px 2px rgba(0,0,0,.3);
+    background-color: #fff;
+    z-index: 100500;
+}
