--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,4 +1,24 @@
 /* Vars color */
+.chat_name_box {
+  margin-bottom: 20px;
+  float: none;
+  min-height: 50px;
+  background-color: #e4e7e5;
+  border-radius: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.chat_name_box .chat_name {
+  margin: auto;
+  float: none;
+  display: block;
+  width: 100%;
+}
+.chat_name_box .chat_name h5 {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
 .chat_box {
   min-height: 500px;
   max-height: 500px;
@@ -9,12 +29,13 @@
 }
 .chat_box .messages_box {
   max-width: 85%;
-  min-height: 494px;
-  max-height: 494px;
+  min-height: 493px;
+  max-height: 493px;
   overflow-y: scroll;
   display: block;
   margin: auto;
   float: none;
+  margin-top: 1px;
 }
 .chat_box .messages_box .message_list li .message_box .message_icon {
   min-width: 33px;
@@ -76,8 +97,11 @@
 #hint {
   display: none;
   position: absolute;
+  width: 130px;
+  margin-left: -320px;
+  margin-top: -170px;
   border-radius: 5px;
-  box-shadow: 0 0 1px 2px rgba(0, 0, 0, 0.3);
+  color: #989a99;
   background-color: #fff;
   z-index: 100500;
 }
