--- a/public/css/chat.less
+++ b/public/css/chat.less
@@ -4,6 +4,28 @@
 @superb_gray: #989A99;
 
 
+.chat_name_box{
+  margin-bottom: 20px;
+  float: none;
+  min-height: 50px;
+  background-color: @gray;
+  border-radius: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+  .chat_name{
+    margin: auto;
+    float: none;
+    display: block;
+    width: 100%;
+    h5{
+      text-align: center;
+      padding: 0;
+      margin: 0;
+    }
+  }
+}
+
+
 .chat_box{
   min-height: 500px;
   max-height: 500px;
@@ -14,12 +36,13 @@
   //overflow-y: scroll;
   .messages_box{
     max-width: 85%;
-    min-height: 494px;
-    max-height: 494px;
+    min-height: 493px;
+    max-height: 493px;
     overflow-y: scroll;
     display: block;
     margin: auto;
     float: none;
+    margin-top: 1px;
     // padding-top: 0px;
     // padding-bottom: 40px;
 
@@ -98,10 +121,14 @@
 #hint {
     display: none;
     position: absolute;
+    width: 130px;
     //padding: 5px;
     // margin: -15px auto auto 10px;
+    margin-left: -320px;
+    margin-top: -170px;
     border-radius: 5px;
-    box-shadow: 0 0 1px 2px rgba(0,0,0,.3);
+    color: @superb_gray;
+    //box-shadow: 0 0 1px 2px rgba(0,0,0,.3);
     background-color: #fff;
     z-index: 100500;
 }
