--- a/public/css/chat.less
+++ b/public/css/chat.less
@@ -90,9 +90,12 @@
 
 .send_box{
   margin-top: 20px;
+  margin-bottom: 20px;
   .button_box{
     font-size: 25px;
     transition: 0.5s;
+    margin-left: 5px;
+    margin-right: 5px;
   }
   .button_box:hover{
     color: @superb_gray;
@@ -100,6 +103,7 @@
     cursor: pointer;
   }
   .input_box{
+    max-width: 80%;
     textarea{
       height: 38px;
       overflow:hidden;
@@ -131,4 +135,10 @@
     //box-shadow: 0 0 1px 2px rgba(0,0,0,.3);
     background-color: #fff;
     z-index: 100500;
+}
+
+.floating-div{
+  .picker_comp{
+    min-width: 100%;
+  }
 }
