--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -20,6 +20,7 @@
   margin: 0;
 }
 .chat_box {
+  width: 100%;
   min-height: 500px;
   max-height: 500px;
   background-color: white;
@@ -29,6 +30,7 @@
 }
 .chat_box .messages_box {
   max-width: 85%;
+  min-width: 85%;
   min-height: 493px;
   max-height: 493px;
   overflow-y: scroll;
@@ -113,4 +115,20 @@
 }
 .floating-div .picker_comp {
   min-width: 100%;
+}
+#upload {
+  display: none;
+  visibility: hidden;
+}
+.upload_wrap {
+  margin-top: 10px;
+}
+.upload_wrap .upload_box {
+  margin: auto;
+  float: none;
+  display: block;
+  max-width: 80%;
+}
+.upload_wrap .upload_box .progress {
+  height: 20px;
 }
