--- a/public/css/chat.less
+++ b/public/css/chat.less
@@ -105,6 +105,20 @@
                     max-height: 100px;
                   }
                 }
+                .file_box{
+                  min-width: 400px;
+                  .file_content{
+                    display: inline-block;
+                    background-color: @gray;
+                    border-radius: 10px;
+                    margin-bottom: 10px;
+                    overflow-x:hidden;
+                    margin-right: 5px;
+                    margin-bottom: 5px;
+                    padding: 5px 5px 5px 5px;
+                    min-width: 200px;
+                  }
+                }
               }
             }
           }
@@ -176,7 +190,6 @@
 
 .upload_wrap{
   margin-top: 10px;
-  display: none;
   .upload_box{
     margin: auto;
     float: none;
