--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 @import "passwordReset.css" screen;
 @import "myAccount.css" screen;
 @import "chat.css" screen;
+@import "tasks.css" screen;
 /* Vars color */
 /* Specification */
 body {
