--- a/public/css/style.less
+++ b/public/css/style.less
@@ -7,6 +7,7 @@
 @import "passwordReset.css" screen;
 @import "myAccount.css" screen;
 @import "chat.css" screen;
+@import "tasks.css" screen;
 body {
     font-family: 'PT Sans', sans-serif;
     background-color: @white;
