--- a/public/css/tasks.less
+++ b/public/css/tasks.less
@@ -1,11 +1,69 @@
+/* Vars color */
+@white: #F7FAF8;
+@gray: #E4E7E5;
+@superb_gray: #989A99;
+@pink: #BD00BD;
+
 .tasks_box{
-  min-height: 250px;
+  // min-height: 250px;
+  // background-color: red;
 }
 
 .card{
   .card-body{
     .tasks_box{
       min-height: 250px;
+      max-height: 350px;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      margin-bottom: 20px;
+      .tasks_list{
+        li{
+          .task_box{
+            padding: 10px 10px 10px 10px;
+            border:1px solid @superb_gray;
+            border-radius: 7px;
+            margin-bottom: 10px;
+            .task_name{
+              justify-content: space-between;
+              .name_and_new{
+                .new_task{
+                  height: 22px;
+                  padding-right: 6px;
+                  padding-left: 6px;
+                  background-color: @pink;
+                  border-radius: 20px;
+                  font-size: 13px;
+                  font-weight: 800;
+                  color: white;
+                  margin-left: 5px;
+                  margin-top: 3px;
+                }
+              }
+              .edit_icon{
+                color: @superb_gray;
+                cursor: pointer;
+              }
+            }
+            .task_time_limit{
+              color: @superb_gray;
+            }
+            .task_text{
+
+            }
+            .open_icon_box{
+              justify-content: flex-end;
+              .open_icon{
+                display: inline-block;
+                font-size: 25px;
+                height: 25px;
+                color: @superb_gray;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
     }
     .task_form{
       .textarea_box{
@@ -23,8 +81,23 @@
           // background-color: #AB0CB6;
         }
       }
+      .input_name_box{
+        margin-bottom: 5px;
+        input{
+          width: 100%;
+        }
+      }
       .input_time_box{
         margin-bottom: 5px;
+        justify-content: space-between;
+        .input_time_text{
+          display: inline-block;
+          height: 22px;
+          margin-top: 7px;
+        }
+        .input_time{
+
+        }
       }
     }
   }
