--- a/public/css/tasks.css
+++ b/public/css/tasks.css
@@ -15,6 +15,10 @@
 .card .card-body .tasks_box .tasks_list li .task_box .task_name {
   justify-content: space-between;
 }
+.card .card-body .tasks_box .tasks_list li .task_box .task_name .name_and_new h5 {
+  max-width: 371px;
+  flex-wrap: wrap;
+}
 .card .card-body .tasks_box .tasks_list li .task_box .task_name .name_and_new .new_task {
   height: 22px;
   padding-right: 6px;
@@ -34,15 +38,62 @@
 .card .card-body .tasks_box .tasks_list li .task_box .task_time_limit {
   color: #989a99;
 }
+.card .card-body .tasks_box .tasks_list li .task_box .task_text .last_cont {
+  display: none;
+}
 .card .card-body .tasks_box .tasks_list li .task_box .open_icon_box {
   justify-content: flex-end;
 }
 .card .card-body .tasks_box .tasks_list li .task_box .open_icon_box .open_icon {
   display: inline-block;
   font-size: 25px;
-  height: 25px;
+  max-height: 25px;
   color: #989a99;
   cursor: pointer;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .open_icon_box .open_icon .open_icon_up {
+  display: none;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .task_files_box {
+  display: none;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .task_files_box .files_list {
+  max-width: 471px;
+  display: block;
+  flex-wrap: wrap;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .task_files_box .files_list li .image_box {
+  max-width: 200px;
+  max-height: 100px;
+  min-width: 200px;
+  min-height: 100px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .task_files_box .files_list li .image_box a {
+  max-width: inherit;
+  max-height: inherit;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .task_files_box .files_list li .image_box a img {
+  max-width: inherit;
+  max-height: inherit;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .task_files_box .files_list li .file_box {
+  min-width: 400px;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .task_files_box .files_list li .file_box .file_content {
+  display: inline-block;
+  background-color: #e4e7e5;
+  border-radius: 10px;
+  overflow-x: hidden;
+  margin-right: 5px;
+  padding: 5px 5px 5px 5px;
+  min-width: 200px;
+}
+.card .card-body .tasks_box .tasks_list li .task_box .task_files_box .files_list li .file_box .file_content a {
+  display: block;
+  height: 100%;
+  width: 100%;
 }
 .card .card-body .task_form .textarea_box {
   width: 100%;
