--- a/public/css/tasks.less
+++ b/public/css/tasks.less
@@ -83,7 +83,7 @@
                   .image_box{
                     max-width: 200px;
                     max-height: 100px;
-                    min-width: 200px;
+                    // min-width: 200px;
                     min-height: 100px;
                     margin-right: 5px;
                     margin-bottom: 5px;
@@ -136,6 +136,29 @@
           // background-color: #AB0CB6;
         }
       }
+      .check_change_box{
+        display: none;
+      }
+      .input_id_box{
+        display: none;
+      }
+      .check_delet_wrap{
+        display: none;
+        .check_delet_box{
+          margin-bottom: 5px;
+          justify-content: space-between;
+          .check_delet_text{
+
+          }
+          .input_check_delet{
+            input{
+              display: block;
+              margin-top: 7px;
+            }
+          }
+        }
+      }
+
       .input_name_box{
         margin-bottom: 5px;
         input{
